@@ -1,6 +1,12 @@
 # ChangeLog for Gentoo System Intialization ("rc") scripts
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPLv2
 
+* baselayout-1.12.3 (02 Aug 2006)
+
+  02 Aug 2007; Roy Marples <uberlord@gentoo.org>:
+
+    Updated tarball.sh to make clean before making the tarball, bug #142457
+
   30 Jul 2007; Mike Frysinger <vapier@gentoo.org>:
 
     If modprobing the rtc module in the clock init.d script failed, fall 
